--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -8,3 +8,4 @@ CONFIRM_PASSWORD: Confirmez mot de passe
 CONTRAINTS-MIN-LENGTH: Votre mot de passe c'est moin
 FIRSTNAME: Nom
 LASTNAME: Prénom
+AGREE-TERMS-AND-PRIVACY-POLICY-AND-COOKIES: J'accepte les <a href="%terms%">conditions d'utilisation</a> et de recevoir des e-mails et actualités <strong class="text-primary fw-300">%sitename%</strong> et je reconnais avoir pris connaissance de la <a href="%policy%">politique de confidentialité</a>.<br>J'accepte également l'utilisation des <strong class="fw-500">cookies fonctionnels</strong> pour m'offrir un meilleur service.
